# wagtail-site-inheritance

./: .bumpversion.cfg  .editorconfig  .gitignore  CHANGES  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-release.yml  python-test.yml
demo/: urls.py
demo/exampledata/: auth_users.json  sites.json
demo/home/: models.py
demo/home/migrations/: 0001_initial.py  0003_otherpage.py  0004_otherpage_custom_content.py
demo/home/templates/home/: other_page.html
demo/settings/: base.py  dev.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/_templates/: sidebar-intro.html
src/wagtail_site_inheritance/: __init__.py  admin.py  apps.py  edit_handler.py  forms.py  models.py  permissions.py  receivers.py  views.py  wagtail_forms.py  wagtail_hooks.py
src/wagtail_site_inheritance/locale/nl/LC_MESSAGES/: django.mo  django.po
src/wagtail_site_inheritance/migrations/: 0001_initial.py  0002_siteinheritanceitem.py
src/wagtail_site_inheritance/templates/wagtail_site_inheritance/: site_list.html  sitetree_form.html
tests/: conftest.py  fixtures.py  settings.py  test_hooks.py  test_models.py
tests/testapp/: factories.py  models.py
tests/testapp/migrations/: 0001_initial.py
