
[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["wagtail_site_inheritance"]

[tool.coverage.paths]
source = [
    "src/wagtail_site_inheritance",
    "/home/runner/work/wagtail-site-inheritance/wagtail-site-inheritance/.tox/*/lib/python*/site-packages/wagtail_site_inheritance",
]

[tool.coverage.report]
show_missing = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = ["wagtail_site_inheritance", "tests"]
use_parentheses = true
indent = 4
